[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "headless-ida"
dependencies = [
    "rpyc",
]
readme = "README.md"
description = "Headless IDA"
authors = [
    {name = "Han Dai", email = "pypi@han.do"},
]
license = {file = "LICENSE"}
keywords = ["ida", "headless", "idapro", "hexrays"]
requires-python = ">=3"
dynamic = ["version"]

[project.scripts]
headless-ida = "headless_ida:headlessida_cli"
headless-ida-server = "headless_ida:headlessida_server_cli"

[project.urls]
homepage = "https://github.com/DennyDai/headless-ida"
documentation = "https://github.com/DennyDai/headless-ida"
repository = "https://github.com/DennyDai/headless-ida"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# empty
